Karmello/puzzle-games#58: highscore - userId -> username, gameId hash to string name
